# gpu_algos

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  COPYRIGHT.txt  README.md  SETUP.md  cloc-def.txt  release_build.sh  run_cmake.sh  setup_build.sh
cuda-gdb/: break_on_launch.init
docs/gpu_algorithms/: gpu_algorithms.tex
include/common/: .clangd  benchmark.h  benchmark_options.h  benchmark_options.hpp  common.txt  metaprogramming.hpp  random.h  random.hpp  type_traits.hpp
include/cuda/: .clangd  benchmark.cuh  benchmark.h  benchmark.hpp  check_errors.cuh  check_errors.h  check_errors.hpp  concepts.h  cuda_utils.cuh  cuda_utils.h  cuda_utils.hpp  eigen_utils.cu.hpp  eigen_utils.cuh  kernel_api.cu.hpp  kernel_api.cuh  kernel_api.h  kernel_api.hpp  kernel_api_cuda.hpp  kernel_api_generic_temp.cuh  kernel_detect_types.cuh  random.cu.hpp  random.hpp  type_traits.cuh  type_traits.h  type_traits.hpp  wmma.cuh
include/hip/: .clangd  benchmark.h  benchmark.hip.h  benchmark.hip.hpp  benchmark.hiph  check_errors.h  check_errors.hip.hpp  check_errors.hiph  eigen_utils.hip.hpp  eigen_utils.hiph  hip_utils.h  hip_utils.hip.h  hip_utils.hip.hpp  hip_utils.hiph  kernel_api.h  kernel_api.hip.h  kernel_api.hip.hpp  kernel_api.hiph  kernel_api_generic_temp.hiph  kernel_detect_types.hiph  random.hip.h  random.hip.hpp  type_traits.h  type_traits.hip.h  type_traits.hip.hpp  type_traits.hiph
python/: README.md
python/gpu_algo_test/: __init__.py  analyze_results.py  gpu_algo_test.py
python/py-gpu-algos/: CMakeLists.txt  README.md  TESTING.md  USAGE.md  benchmark_performance.py  build.sh  pytest.ini  run_tests.py  setup.py  setup_simple.py
python/py-gpu-algos/examples/: glm_gradient_naive_example.py  glm_gradient_xyyhat_example.py  glm_predict_naive_example.py  matrix_product_naive_example.py  matrix_product_tiled_example.py  matrix_transpose_striped_example.py  tensor_sort_bitonic_example.py  vector_cummax_parallel_example.py  vector_cumsum_parallel_example.py  vector_cumsum_serial_example.py  vector_scan_parallel_example.py
python/py-gpu-algos/py_gpu_algos/: __init__.py  _module_loader.py  glm_ops.py  matrix_ops.py  matrix_product_ops.py  matrix_transpose_ops.py  sort_ops.py  vector_ops.py
python/py-gpu-algos/src/cuda/: glm_ops.cu  matrix_ops.cu  matrix_product_ops.cu  matrix_transpose_ops.cu  sort_ops.cu  vector_ops.cu
python/py-gpu-algos/tests/: README.md  conftest.py  test_error_handling.py  test_glm_ops.py  test_integration.py  test_matrix_ops.py  test_sort_ops.py  test_vector_ops.py  utils.py
python/tests/: __init__.py  test_basic.py  test_cmake_presets.py
scripts/: clean.sh  cloc.sh  configure_build.sh  create_clangd_helper_files.sh  cuda_to_hip.sed  cuda_to_hip.sh  debug_build.sh  download-install-rocm.sh  fix_source_path.sh  qa.sh  release_build.sh  setup_build.sh
src/benchmarks/: CMakeLists.txt
src/benchmarks/cuda/gradient/: CMakeLists.txt  gradient_leastsquares_elasticnet_naive.cu  gradient_leastsquares_elasticnet_optimizer.cu  gradient_leastsquares_elasticnet_tensor.cu  matrix_gradient_elasticnet.cu
src/benchmarks/cuda/matrix_product/: CMakeLists.txt  matrix_product_cublas.cu  matrix_product_cutlass.cu  matrix_product_naive.cu  matrix_product_tensor.cu  matrix_product_tiled.cu  matrix_product_warp.cu
src/benchmarks/cuda/matrix_transpose/: matrix_transpose_cublas.cu  matrix_transpose_naive.cu  matrix_transpose_striped.cu  matrix_transpose_tiled.cu
src/benchmarks/cuda/tensor_sort/: tensor_sort_bitonic.cu
src/benchmarks/cuda/vector_cummax/: vector_cummax_parallel.cu
src/benchmarks/cuda/vector_cumsum/: vector_cumsum_cooperative.cu  vector_cumsum_parallel.cu  vector_cumsum_serial.cu
src/benchmarks/cuda/vector_scan_generic/: CMakeLists.txt  vector_scan_parallel.cu
src/benchmarks/hip/matrix_product/: CMakeLists.txt  matrix_product_naive.hip.cpp  matrix_product_rocblas.hip.cpp  matrix_product_tensor.hip.cpp  matrix_product_warp.hip.cpp
src/benchmarks/hip/matrix_transpose/: matrix_transpose_naive.hip.cpp  matrix_transpose_rocblas.hip.cpp  matrix_transpose_striped.hip.cpp
src/benchmarks/hip/vector_cummax/: CMakeLists.txt
src/benchmarks/hip/vector_cumsum/: vector_cumsum_cooperative.hip.cpp  vector_cumsum_serial.hip.cpp
src/benchmarks/matrix_product/: CMakeLists.txt  matrix_product_cublas.cu  matrix_product_cutlass.cu  matrix_product_naive.cu  matrix_product_tensor.cu  matrix_product_tiled.cu  matrix_product_warp.cu
src/benchmarks/matrix_transpose/: CMakeLists.txt  matrix_transpose_cublas.cu  matrix_transpose_naive.cu  matrix_transpose_striped.cu  matrix_transpose_tiled.cu
src/benchmarks/vector_cummax/: vector_cummax_parallel.cu
src/benchmarks/vector_cumsum/: CMakeLists.txt  vector_cumsum_cooperative.cu  vector_cumsum_parallel.cu  vector_cumsum_serial.cu
src/benchmarks/vector_scan_generic/: vector_scan_parallel.cu
src/common/: .clangd  benchmark.cu  common.txt  (+1 more)
src/cuda/benchmarks/matrix_transpose/: CMakeLists.txt  matrix_transpose_cublas.cu  matrix_transpose_naive.cu  matrix_transpose_striped.cu  matrix_transpose_tiled.cu
src/hip/benchmarks/matrix_product/: CMakeLists.txt  matrix_product_cublas.hip  matrix_product_cublas.hip.cpp  matrix_product_naive.hip  matrix_product_naive.hip.cpp  matrix_product_rocblas.hip  matrix_product_rocblas.hip.cpp  matrix_product_tensor.hip  matrix_product_tensor.hip.cpp  matrix_product_tiled.hip  matrix_product_tiled.hip.cpp  matrix_product_warp.hip  matrix_product_warp.hip.cpp
src/hip/benchmarks/matrix_transpose/: CMakeLists.txt  matrix_transpose_cublas.hip.cpp  matrix_transpose_naive.hip  matrix_transpose_naive.hip.cpp  matrix_transpose_rocblas.hip  matrix_transpose_rocblas.hip.cpp  matrix_transpose_striped.hip  matrix_transpose_striped.hip.cpp  matrix_transpose_tiled.hip  matrix_transpose_tiled.hip.cpp
src/tools/matrix_product/: CMakeLists.txt  matrix_product_cublas.cu  matrix_product_naive.cu  matrix_product_opt.cu  matrix_product_tensor.cu  matrix_product_tiled.cu  matrix_product_warp.cu
test/: pyproject.toml
test/gpu_algo_test/: __init__.py  analyze_results.py  gpu_algo_test.py
(+348 files in other folders)
